Always display scrollbar to prevent page from jumping around.

--- a/ddt/common.less
+++ b/ddt/common.less
@@ -1,3 +1,7 @@
+body {
+  overflow-y: scroll;
+}
+
 .ddt-margin-vertical {
   margin-top: @navbar-margin-bottom;
   margin-bottom: @navbar-margin-bottom;
